# grants-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  config.py  docker-compose.yml  pyproject.toml  run.py  seed.py  seed_demo_applications.py  wsgi.py
.claude/: orchestrator-claims.json  settings.json
.claude/notes/: 2026-04-16-265376ce.md  2026-04-16-694b5e85.md  2026-04-16-859660d4.md  2026-04-16-e7dbf187.md  2026-04-16-run3.md  2026-04-16-ux-round2.md
.github/workflows/: check-ideas.yml  test.yml  tests.yml
app/: __init__.py  admin.py  applicant.py  assessor.py  assessor_ai.py  audit.py  auth.py  authz.py  award_rules.py  extensions.py  forms_runner.py  models.py  prospectus_parser.py  public.py  scoring.py  tasks.py  uploads.py
app/external_validators/: __init__.py  base.py  companies_house.py  find_that_charity.py
app/forms/: common-ground-application-v1.json  ehcf-application-v1.json  ehcf-assessment-v1.json  local-digital-application-v1.json
ideas/: 2026-04-16-1200-test-data-seed-script.md  2026-04-16-1210-user-research-product-framing.md  2026-04-16-1215-grantos-product-vision.md  use-the-ideas-directory.md
refs/: changing-futures-lived-experience-support-grant-prospectus.md  combatting-hate-against-muslims-fund-prospectus.md  common-ground-award-prospectus.md  local-digital-fund-round-6-prospectus.md  sample-prospectus.csv
tests/: conftest.py  test_applicant.py  test_applicant_external_validation.py  test_assessor.py  test_assessor_ai.py  test_async_assessment.py  test_auth.py  test_award_rules.py  test_external_validators.py  test_forms_eligibility_template.py  test_forms_progress_template.py  test_forms_runner.py  test_forms_summary_template.py  test_forms_templates.py  test_prospectus_parser.py  test_scoring.py  test_seed.py  test_smoke.py  test_uploads.py
(+39 files in other folders)
